--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -117,6 +117,9 @@
 </th:block>
 
 <th:block th:fragment="footer">
+    <div class="box-wave">
+        <div class="wave"></div>
+    </div>
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -163,7 +166,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row pt-5 mt-5 text-center">
+            <div class="row text-center">
                 <div class="col-md-12">
                     <p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
