--- a/src/main/resources/templates/account/tasker/step2.html
+++ b/src/main/resources/templates/account/tasker/step2.html
@@ -40,52 +40,37 @@
                                             thêm hoặc xóa các danh mục khỏi hồ sơ của bạn hoặc sửa đổi giá của bạn bất
                                             cứ lúc nào. Bạn phải chọn một danh mục để tiếp tục.</span>
 
-                            <div class="my-3">
-                                <span class="icon-check_box"></span>
-                                <span class="font-weight-bold" style="cursor: pointer;" data-toggle="collapse"
-                                      href="#collapseExample1"
-                                      role="button" aria-expanded="false" aria-controls="collapseExample"
-                                      th:text="#{register-task.cleaning}">
+                            <div class="my-3" th:each="category: ${categories}">
+                                <span class="font-weight-bold"
+                                      th:text="${category.getName()}">
                                 </span>
                                 <small style="color: dodgerblue"><i class="icon-star"></i> Kỹ năng phổ
                                     biến
                                 </small>
-                                <p th:text="#{register-task.description-clean}"></p>
-                                <form class="collapse" id="collapseExample1">
-                                    <div class="card card-body">
-                                        <label class="font-weight-bold" th:text="#{register-task.scope-task}"></label>
+
+                                    <form th:id="@{'form' + ${category.getId()}}" class="card card-body mt-3">
+                                        <input type="hidden" name="categoryId" th:value="${category.getId()}"/>
+                                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                                        <label class="font-weight-bold">Mô tả</label>
                                         <div>
-                                            <ul>
-                                                <li th:text="#{register-task.clean-scope-1}">
-                                                </li>
-                                                <li th:text="#{register-task.clean-scope-2}">
-                                                </li>
-                                                <li th:text="#{register-task.clean-scope-3}">
-                                                </li>
-                                                <li th:text="#{register-task.clean-scope-4}">
-                                                </li>
-                                                <li th:text="#{register-task.clean-scope-5}">
-                                                </li>
-                                                <li th:text="#{register-task.clean-scope-6}">
-                                                </li>
-                                            </ul>
-                                            <p th:text="#{register-task.clean-scope-7}"></p>
+                                            <p th:text="${category.getDescription()}"></p>
                                             <div class="form-group form-check">
                                                 <input type="checkbox" class="form-check-input"
-                                                       id="exampleCheck1" data-toggle="collapse"
-                                                       href="#check1"
+                                                       th:id="@{'collapse' + ${category.getId()}}" data-toggle="collapse"
+                                                       th:href="@{'#check' + ${category.getId()}}"
                                                        role="button" aria-expanded="false"
-                                                       aria-controls="collapseExample"/>
-                                                <label class="form-check-label font-weight-bold" for="exampleCheck1"
+                                                       name="confirm" value="1"
+                                                />
+                                                <label class="form-check-label font-weight-bold" th:for="@{'#collapse' + ${category.getId()}}"
                                                        th:text="#{register-task.clean-scope-8}"></label>
                                             </div>
-                                            <div class="collapse" id="check1">
+                                            <div class="collapse" th:id="@{'check' + ${category.getId()}}">
                                                 <label class="font-weight-bold">Giá đề bạt</label>
-                                                <span>Thường công việc thu về ~38000đ/giờ</span>
+                                                <span>Thường công việc thu về <span th:text="${#numbers.formatDecimal(category.getMinPrice().intValue(), 0, 'COMMA', 0, 'POINT')}"></span> VND/giờ</span>
                                                 <div class="form-inline">
                                                     <div class="form-group mb-2">
                                                         <b>VND&nbsp;</b>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input type="text" name="price" class="form-control" placeholder="">
                                                     </div>
                                                 </div>
                                                 <div class="mt-3">
@@ -93,26 +78,26 @@
                                                     <span>Nếu bạn có thể chuẩn bị dụng cụ sẵn, cơ hội được chọn của bạn có thể cao hơn</span>
                                                     <div class="form-group form-check">
                                                     <input type="checkbox" class="form-check-input"
-                                                           id="haveTool" data-toggle="collapse"
-                                                           href="#checkTool"
-                                                           role="button" aria-expanded="false"
-                                                           aria-controls="collapseExample"/>
+                                                           id="haveTool" name="haveTool" value="1" />
                                                     <label class="form-check-label font-weight-bold" for="haveTool">Tôi có!</label>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="font-weight-bold">Mô tả</label>
                                                     <div class="form-group">
-                                                        <textarea class="form-control" placeholder="Thuyết phục mọi người rằng tôi là ứng viên phù hợp"></textarea>
+                                                        <textarea class="form-control" name="description" placeholder="Thuyết phục mọi người rằng tôi là ứng viên phù hợp"></textarea>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="reset" class="btn btn-secondary" value="Huỷ">
+                                                    <input type="reset" class="btn btn-secondary"
+                                                           th:id="@{'collapse' + ${category.getId()}}" data-toggle="collapse"
+                                                           th:href="@{'#check' + ${category.getId()}}"
+                                                           role="button" aria-expanded="false"
+                                                           value="Hủy">
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </form>
+                                    </form>
                             </div>
 
                             <button class="btn btn-success" id="btnContinue">
@@ -143,11 +128,12 @@
                     <div class="card addSignature2" style="display: none">
                         <div class="card-body">
                             <label class="font-weight-bold">Điều luật TaskUnite</label>
-                            <p><img th:src="@{~/images/fbi.png}" alt="fbi" /></p>
+                            <p><img th:src="@{~/images/fbi.png}" width="100" alt="fbi" /></p>
                             <p>FBI WARNING</p>
                             <p>DMCA 2019</p>
-                            <button class="btn btn-success">
-                                Tiếp tục
+                            <input id="csrfuck" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                            <button class="btn btn-success" id="completeTasker">
+                                Hoàn thành!
                             </button>
                         </div>
                     </div>
@@ -158,6 +144,6 @@
     <th:block th:include="fragment/layout :: footer"></th:block>
 </div>
 <th:block th:include="fragment/layout :: javascript"></th:block>
-<script th:src="@{~/js/register/tasker.js}"></script>
+<script th:src="@{~/js/account/tasker.js}"></script>
 </body>
 </html>
