--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -98,6 +98,11 @@
                                             <!--</a>-->
                                         <!--</li>-->
                                         <li sec:authorize="isAuthenticated()">
+                                            <form th:action="@{/api/logout}" id="logout" method="post">
+                                                <input type="hidden" th:name="${_csrf.parameterName}"
+                                                       th:value="${_csrf.token}" />
+                                            </form>
+                                            <a href="#" onclick="document.getElementById('logout').submit();">Log out</a>
                                             <a th:href="@{/profile}">
                                                 <span class="bg-primary text-white py-3 px-4 rounded">
                                                     <span class="icon-user mr-2" style="margin-top: -2px;"></span>
