--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -98,17 +98,19 @@
                                             <!--</a>-->
                                         <!--</li>-->
                                         <li sec:authorize="isAuthenticated()">
-                                            <form th:action="@{/api/logout}" id="logout" method="post">
-                                                <input type="hidden" th:name="${_csrf.parameterName}"
-                                                       th:value="${_csrf.token}" />
-                                            </form>
-                                            <a href="#" onclick="document.getElementById('logout').submit();">Log out</a>
                                             <a th:href="@{/profile}">
                                                 <span class="bg-primary text-white py-3 px-4 rounded">
                                                     <span class="icon-user mr-2" style="margin-top: -2px;"></span>
                                                     <th:block th:text="#{home.profile}">Profile </th:block>
                                                 </span>
                                             </a>
+                                        </li>
+                                        <li sec:authorize="isAuthenticated()">
+                                            <form th:action="@{/api/logout}" id="logout" method="post">
+                                                <input type="hidden" th:name="${_csrf.parameterName}"
+                                                       th:value="${_csrf.token}" />
+                                            </form>
+                                            <a href="#" onclick="logout();">Log out</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -130,7 +132,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h3 class="footer-heading mb-4 text-white">Về chúng tôi</h3>
-                    <p>Task Unite giúp kết nối những người có yêu cầu việc và những người có nhu cầu làm việc một cách
+                    <p>TaskUnite giúp kết nối những người có yêu cầu việc và những người có nhu cầu làm việc một cách
                     nhanh chóng và đáng tin cậy.</p>
                     <p><a href="#" class="btn btn-primary pill text-white px-4">Read More</a></p>
                 </div>
@@ -202,6 +204,7 @@
     <script th:src="@{~/js/moment.min.js}"></script>
     <script th:src="@{~/js/aos.js}"></script>
     <script th:src="@{~/js/main.js}"></script>
+    <script th:src="@{~/js/account/logout.js}"></script>
 </th:block>
 </body>
 </html>
