--- a/src/main/resources/templates/account/intro.html
+++ b/src/main/resources/templates/account/intro.html
@@ -34,7 +34,7 @@
                     <img class="center-image mb-3" th:src="@{~/images/client-sign-up-img.png}" alt="">
                     <strong>Đăng ký ngay để nhận sự trợ giúp của cộng đồng Tasker chất lượng</strong>
                     <div class="mt-3">
-                        <a href="/master/step1">
+                        <a href="/intro/master">
                             <button class="btn btn-success" type="button">Trở thành Master
                             </button>
                         </a>
