--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -21,9 +21,9 @@
             <div class="row align-items-center">
                 <div class="col-12 text-center" data-aos="fade">
                     <h1>Không cần phải tự tay hoàn thành hết mọi công việc</h1>
-                    <h3 style="color: whitesmoke">
-                        Hãy để mạng lưới hàng ngàn Tasker đáng tin cậy giúp đỡ bạn, từ lau dọn đến sửa chữa
-                    </h3>
+                    <a href="/intro/">
+                        <button class="btn btn-success">Hoàn thành đăng ký</button>
+                    </a>
                 </div>
             </div>
         </div>
