--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" th:href="@{~/fonts/flaticon/font/flaticon.css}">
         <link rel="stylesheet" th:href="@{~/css/aos.css}">
         <link rel="stylesheet" th:href="@{~/css/style.css}">
+        <link rel="stylesheet" th:href="@{~/css/toastr.min.css}"/>
     </th:block>
 </head>
 <body>
@@ -204,6 +205,7 @@
     <script th:src="@{~/js/moment.min.js}"></script>
     <script th:src="@{~/js/aos.js}"></script>
     <script th:src="@{~/js/main.js}"></script>
+    <script th:src="@{~/js/toastr.min.js}"></script>
     <script th:src="@{~/js/account/logout.js}"></script>
 </th:block>
 </body>
