--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -21,9 +21,6 @@
             <div class="row align-items-center">
                 <div class="col-12 text-center" data-aos="fade">
                     <h1>Không cần phải tự tay hoàn thành hết mọi công việc</h1>
-                    <a href="/intro/">
-                        <button class="btn btn-success">Hoàn thành đăng ký</button>
-                    </a>
                 </div>
             </div>
         </div>
@@ -383,6 +380,6 @@
 </div>
 
 <th:block th:replace="fragment/layout :: javascript"> </th:block>
-
+<script th:src="@{~/js/index/index.js}"></script>
 </body>
 </html>
